Add recycleview on boarding

--- a/app/src/main/res/layout/fragment_on_boarding2.xml
+++ b/app/src/main/res/layout/fragment_on_boarding2.xml
@@ -4,7 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.ui.onboarding.OnBoarding2Fragment">
+    tools:context=".activity.ui.onboarding.fragment2.OnBoarding2Fragment">
+
+    <TextView
+        android:id="@+id/tvTopscore"
+        style="@style/Judul"
+        android:text="@string/top_score"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcTopscore"
@@ -12,7 +20,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTopscore" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
