--- a/app/src/main/res/layout/fragment_on_boarding3.xml
+++ b/app/src/main/res/layout/fragment_on_boarding3.xml
@@ -4,17 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activity.ui.onboarding.OnBoarding3Fragment">
+    tools:context=".activity.ui.onboarding.fragment3.OnBoarding3Fragment">
+
+    <TextView
+        android:id="@+id/tvTopscore"
+        style="@style/Judul"
+        android:text="@string/history"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rcHistory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTopscore" />
 
     <TextView
         android:id="@+id/btn_next"
